tests/errors/syn_while10.java
public class syn_while10 {
public static void main(String[] args){
while true ) {
 
}
}
}